# slack-github-triager

./: README.md  pyproject.toml
slack_github_triager/: cli.py  config.py  github.py  processing.py  slack.py  slack_client.py  utils.py
